fix for hiding horizontal overflow

--- a/shared/css/cyph.base.scss
+++ b/shared/css/cyph.base.scss
@@ -8,7 +8,7 @@
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004) !important;
 }
 
-html, body, #main {
+#main {
 	overflow-x: hidden;
 }
 
